--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  use_view_model:
+    path: ../
+  flutter_hooks: ^0.18.6
 
 dev_dependencies:
   flutter_test:
